<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    tools:context=".TodayWeatherFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:id="@+id/weather_panel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">
        <TextView
            android:id="@+id/txt_city_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weather_in_viet_nam"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/oi"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_weather"
                android:layout_width="@dimen/qw"
                android:layout_height="@dimen/wq"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/txt_temperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/jkjk"
                android:text="@string/lgl"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/nvnv"
                android:textStyle="bold" />
        </LinearLayout>
        <TextView
            android:id="@+id/txt_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/das"
            android:text="@string/weather_int_viet_nam"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/bxbcvb"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_date_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="@string/weather_int_viet_nam"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/cgng"
            android:textStyle="bold" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/bdg"
            android:background="@drawable/border"
            android:padding="@dimen/dgdfg"
            android:stretchColumns="*">

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/cell"
                    android:text="@string/sktd" />

                <TextView
                    android:id="@+id/txt_wind"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_marginLeft="@dimen/fgdhd"
                    android:text="speed: 1 deg:1" />

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/cell"
                    android:text="@string/dh" />

                <TextView
                    android:id="@+id/txt_pressure"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_marginLeft="@dimen/kdk"
                    android:text="@string/_9999_99hpa" />

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/cell"
                    android:text="@string/md" />

                <TextView
                    android:id="@+id/txt_humidity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_marginLeft="@dimen/ana"
                    android:text="@string/lw" />

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/cell"
                    android:text="@string/vj" />

                <TextView
                    android:id="@+id/txt_sunrise"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_marginLeft="@dimen/prr"
                    android:text="@string/_12_00" />

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/cell"
                    android:text="@string/sfg" />

                <TextView
                    android:id="@+id/txt_sunset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_marginLeft="@dimen/fflf"
                    android:text="@string/_12_00" />

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/cell"
                    android:text="@string/geo_coords" />

                <TextView
                    android:id="@+id/txt_geo_coord"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_marginLeft="@dimen/psps"
                    android:text="@string/_32_0_45_88" />

            </TableRow>
        </TableLayout>


    </LinearLayout>

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:indeterminate="true" />
</RelativeLayout>