<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mcmcmcmcmcmcmc"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/dfbfh"
            android:layout_height="@dimen/mdgj"
            android:text="@string/nh_p_a_ch"
            android:textColor="@color/blue"
            android:textSize="@dimen/dcadv" />

        <AutoCompleteTextView
            android:id="@+id/actvx"
            android:hint="@string/diachi"
            android:textColorHint="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="@dimen/vadvad"
            android:completionThreshold="1" />
    </LinearLayout>

    <Button
        android:id="@+id/btny"
        android:textColor="@color/blue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/n67"
        android:layout_gravity="center_horizontal"
        android:text="@string/xem_th_i_ti_t" />

    <TextView
        android:id="@+id/tvz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/blue"
        android:layout_gravity="center_horizontal"
        android:text="@string/g_i_a_i_m"
        android:textSize="@dimen/sjjsgn" />

    <ListView
        android:id="@+id/lv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"></ListView>

</LinearLayout>