<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/oyoyoyoyoy"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ForecastFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:id="@+id/main_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_5_days_weather_forecast"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/ty"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_city_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/uggk"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/kojo"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_geo_coord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ouio"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/mn"
            android:textStyle="italic" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_forecast"
        android:layout_below="@+id/main_info"
        android:layout_marginTop="@dimen/yu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </androidx.recyclerview.widget.RecyclerView>
</RelativeLayout>